# flask-project

./: .gitignore  .pylintrc  Dockerfile  pylintrc
.github/workflows/: ci.yaml  test.yml
eb-flask/: Makefile  application.py  config.py  forms.py  models.py  pyproject.toml  requirements.txt  settings.json  test_home.py
eb-flask/flaskr/: application.py  config.py  forms.py
eb-flask/flaskr/templates/forms/: new_vehicle.html
eb-flask/flaskr/templates/layouts/: main.html
eb-flask/flaskr/templates/pages/: show_user copy.html  users copy.html  users.html
eb-flask/static/css/: bootstrap-theme.css
eb-flask/templates/: index.html  vehicles.html
eb-flask/templates/forms/: edit_user.html  edit_vehicle.html  new_user.html  new_vehicle.html
eb-flask/templates/layouts/: main.html
eb-flask/templates/pages/: home.html  show_user.html  show_vehicle copy.html  show_vehicle.html  users.html  vehicles.html
eb-flask/tests/: test  test_home.py
