[build-system]
requires = [
    "setuptools",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "eb_flask"
version = "0.0.1"
description = "Sample project using Flask and EBS on AWS"
authors = [
    {name = "Loic Diridollou", email = "l.d@outlook.com"},
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "flask",
  "flask_sqlalchemy",
  "flask_wtf",
  "wtforms",
]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
namespaces = false # Disable implicit namespaces

[project.optional-dependencies]
lint = [
  "black",
  "isort",
  "mypy",
  "ruff",
]

test = [
  "pytest",
  "pytest-cov",
]
dev = [
  "eb_flask[lint,test]"
]

# [project.scripts]
# plttest = "test_repo.scripts.plot_styles:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "E722",
    "B008",  # function call in defaults
    "I001",  # import order
    "PLC1901",  # truthy strings
]

select = [
    "A",
    "B",
    "D",
    "E",
    "F",
    "I",
    "PLC",
    "PTH",
    "UP",
    "W",
]

pydocstyle.convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"lib/**/__init__.py" = ["D"]

[tool.isort]
known_first_party = ["eb_flask"]
profile = "black"
